Fix timTable having horizontal scrollbar in Firefox

--- a/timApp/static/scripts/tim/plugin/timTable.scss
+++ b/timApp/static/scripts/tim/plugin/timTable.scss
@@ -64,4 +64,5 @@ td input[type="text"] {
   overflow: auto;
   border: none;
   padding-right: 4em;
+  margin: auto;
 }
